Bug 4888887: [Programmatic Access- API Management - Add Variation] WCAG 1.4.3: Elements must have sufficient color contrast (.style-card-label)

--- a/src/themes/paperbits/styles/styles.design.scss
+++ b/src/themes/paperbits/styles/styles.design.scss
@@ -68,7 +68,6 @@ $style-guide-color: #000;
         }
 
         &.style-card-empty {
-            color: #ccc;
             display: flex;
             flex-direction: column;
             align-items: center;
